<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="a"

        android:icon="@drawable/filter_icon_white"
        app:showAsAction="always"
        android:visible="false">


        <menu>
            <item
                android:id="@+id/action_gallery"
                android:title="@string/all"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_gallery1"
                android:orderInCategory="100"
                android:title="@string/audio"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_gallery2"
                android:orderInCategory="100"
                android:title="@string/video"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_gallery3"
                android:orderInCategory="100"
                android:title="@string/images"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
