<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:playpauseview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:max="100"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:progressDrawable="@drawable/seekbar_bg"
            android:thumb="@drawable/seekbar_thumb" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/slidepanel_time_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <!--            <SeekBar-->
            <!--                android:id="@+id/seekbar"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="0.7" />-->


            <TextView
                android:id="@+id/slidepanel_time_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="8dp"
                android:text="@string/timeProgressDefault"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_playesongname_onPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_40"
            android:ellipsize="marquee"
            android:focusable="true"
            android:freezesText="true"
            android:fadingEdge = "horizontal"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_backward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bar_selector_white"
                android:contentDescription="@string/descBackward"
                android:gravity="center_vertical|end"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@android:drawable/ic_media_previous" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTint="@android:color/white"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

                <com.raman.kumar.shrikrishan.tmrMusic.helpers.PlayPauseView
                    android:id="@+id/btn_play"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:foreground="?android:selectableItemBackground"
                    playpauseview:isCircleDraw="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/btn_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bar_selector_white"
                android:contentDescription="@string/descForward"
                android:gravity="center_vertical|end"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@android:drawable/ic_media_next" />

            <LinearLayout
                android:id="@+id/llShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/btn_shuffle"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/bar_selector_white"
                    android:contentDescription="@string/descForward"
                    android:gravity="center_vertical|end"
                    android:src="@drawable/ic_shuffle_white_36dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>